Adjustments have been made
